[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SIGym_MinbiaoHan"
version = "0.0.1"
authors = [
  { name="Minbiao Han", email="minbiaohan@uchicago.edu" },
  { name="Xinyu Liu", email="xylucien@uchicago.edu" },
  { name="Quinn Dawkins", email="qed4wg@virginia.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lab-sigma/SIGym"
