[project]
name = "sigym"
version = "0.0.1"
authors = [
  { name="Minbiao Han", email="minbiaohan@uchicago.edu" },
  { name="Quinn Dawkins", email="qed4wg@virginia.edu" }
]
description = "sigym package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lab-sigma/SIGym"
Issues = "https://github.com/lab-sigma/SIGym/issues"